--- a/index.html
+++ b/index.html
@@ -212,21 +212,29 @@ var myLocation;
 
 function getLocation() {
     if (navigator.geolocation) {
-        navigator.geolocation.getCurrentPosition(showPosition);
+        navigator.geolocation.getCurrentPosition(showPosition, showError);
     } else { 
         alert("Geolocation is not supported by this browser.");
     }
 }
 
-function showPosition(position) {
-    myLocation = {
-        latitude: position.coords.latitude,
-        longitude: position.coords.longitude
-    };
-
-    var mapSrc = "https://maps.google.com/maps?q=" + myLocation.latitude + "," + myLocation.longitude + "&hl=es;z=14&output=embed";
-    document.getElementById('map').innerHTML = "<iframe src='" + mapSrc + "'></iframe>";
+function showError(error) {
+    switch(error.code) {
+        case error.PERMISSION_DENIED:
+            alert("User denied the request for Geolocation.");
+            break;
+        case error.POSITION_UNAVAILABLE:
+            alert("Location information is unavailable.");
+            break;
+        case error.TIMEOUT:
+            alert("The request to get user location timed out.");
+            break;
+        case error.UNKNOWN_ERROR:
+            alert("An unknown error occurred.");
+            break;
+    }
 }
+
 
 window.onload = getLocation;
         
